--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
+        "realrashid/sweet-alert": "^3.1",
         "santigarcor/laratrust": "5.2.*"
     },
     "require-dev": {
