--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
         "realrashid/sweet-alert": "^3.1",
-        "santigarcor/laratrust": "5.2.*"
+        "spatie/laravel-permission": "^3.9"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
