updated gitignore for defaults

--- a/storage/app/public/.gitignore
+++ b/storage/app/public/.gitignore
@@ -1,2 +1,19 @@
 *
 !.gitignore
+!blogs/
+!events/
+!events/post
+!gallery/
+!sitebasics/
+!sitebasics/default-about-banner.jpg
+!sitebasics/default-favicon.png
+!sitebasics/default-home-banner.jpg
+!sitebasics/default-home-counter-bg.jpg
+!sitebasics/default-logo-alt.png
+!sitebasics/default-logo.png
+!users/
+!users/avatars/
+!users/avatars/default-photo.jpg
+!users/covers/
+!users/covers/default-user-cover.jpg
+!users/portfolios/
